--- a/index.html
+++ b/index.html
@@ -3,8 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Le Tour de France 2017</title>
+
+    <style>
+        body {
+            background-color: #e1ecf5;
+        }
+        .container {
+            margin: 0 auto;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .chart {
+            width: 100%;
+            height: 600px;
+
+            position: relative;
+        }
+        .templates {
+            display: none;
+        }
+        .avatar {
+            position: absolute;
+            --width: calc(135px * .6);
+            --height: calc(135px * .6);
+            width: var(--width);
+            height: var(--height);
+            background-image: url(avatars.jpeg);
+            border-radius: calc(var(--width) / 2);
+            box-shadow: 0 0 5px 0;
+        }
+        .avatar:hover {
+            z-index: 100;
+        }
+    </style>
 </head>
 <body>
+
+<div class="container">
+    <h1 class="stage-title">Stage Title</h1>
+    <h2 class="stage-location"></h2>
+    <h3 class="stage-date"></h3>
+
+    <div class="chart">
+
+    </div>
+</div>
+
+<div class="templates">
+    <div class="rider template">
+        <div class="avatar"></div>
+    </div>
+</div>
 
 <script src="index.js"></script>
 
