--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <title>Le Tour de France 2017</title>
 
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            overflow: hidden;
+        }
         body {
-            background-color: #e1ecf5;
+            position: relative;
+            z-index: 1;
+            height: 100%;
+        }
+        /** hack to make background lighter (see https://stackoverflow.com/a/18985783/778272) */
+        body:before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url(background.jpg) no-repeat;
+            background-size: cover;
+            opacity: .4;
+            z-index: -1;
+        }
+        .logo {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 200px;
+        }
+        .stage-title {
+            margin: 20px 0 0 0;
         }
         .container {
             margin: 0 auto;
@@ -41,9 +70,10 @@
 </head>
 <body>
 
+<img class="logo" src="logo.png" alt="logo">
+
 <div class="container">
     <h1 class="stage-title">Stage Title</h1>
-    <h2 class="stage-location"></h2>
     <h3 class="stage-date"></h3>
 
     <div class="chart">
