--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <img class="logo" src="assets/logo.png" alt="logo">
 
 <div class="container">
-    <h1 class="stage-title">Stage Title</h1>
+    <h1 class="stage-title"></h1>
     <h3 class="stage-date"></h3>
 
     <div class="chart">
