Compute scale for coordinate conversions

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             position: absolute;
             top: 200px;
             bottom: 50px;
-            /*border: 1px solid black;*/
+            border: 1px solid black;
         }
         #first-time, #last-time {
             position: absolute;
